添加备忘详情页面
