# src/api/index.ts
@@ -15,10 +15,16 @@ export type { BookmarkListResult } from './models/BookmarkListResult';
 export { BookmarkResponse } from './models/BookmarkResponse';
 export type { BookmarkSingleResult } from './models/BookmarkSingleResult';
 export { BookmarkUpdateRequest } from './models/BookmarkUpdateRequest';
-export type { GenericResult } from './models/GenericResult';
 export type { MemoCreateRequest } from './models/MemoCreateRequest';
 export type { MemoDeleteRequest } from './models/MemoDeleteRequest';
+export type { MemoGetRequest } from './models/MemoGetRequest';
 export type { MemoPageRequest } from './models/MemoPageRequest';
+export type { MemoPageResult } from './models/MemoPageResult';
+export type { MemoResponse } from './models/MemoResponse';
+export type { MemoSingleResult } from './models/MemoSingleResult';
+export type { MemoTagDomain } from './models/MemoTagDomain';
+export type { MemoTagListResult } from './models/MemoTagListResult';
+export type { MemoTagResponse } from './models/MemoTagResponse';
 export type { MemoUpdateRequest } from './models/MemoUpdateRequest';
 export type { PageableRequest } from './models/PageableRequest';
 export type { StringResult } from './models/StringResult';
